--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     ---------------------------------------------------------------
     Add your name to this file below:
-    NAME: 
+    NAME: Abdul Hameed Ahmed
     ---------------------------------------------------------------
 */
 
@@ -23,16 +23,18 @@
     --dk-gray: #222;
 
     /* Font Stacks */
+	--heading-font: 'Seymour One', sans-serif;
+	--body-font: 'Lato', Arial, sans-serif;
     /* add the two font stacks here */
 }
 
 body{
-	/* set the font family to Lato, Arial, sans-serif (--body-fonts) */
-	/* Set the line height to 1.5 */
-	/* set the font size to 1.1rem	*/
-	/* set the font color to #222 (--dk-gray) */
-	margin: 0;
-	padding: 0;
+	font-family: var(--body-font);
+  	font-size: 1.1rem;
+ 	line-height: 1.5;
+ 	color: var(--dk-gray);
+  	margin: 0;
+  	padding: 0;
 }
 
 header{
