--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,9 @@ header{
 }
 
 h1, h2, h3{
-	/* center align the text */
-	/* use a web font here (instructions on page) */
-	/* make the heading text all small caps style */
+	text-align: center;
+  	font-family: var(--heading-font);
+ 	font-variant: small-caps;
 }
 
 h2{
@@ -59,6 +59,7 @@ h2{
 h3{
 	margin: 0;
 	padding: 4px;
+	text-decoration: solid underline var(--mint) 4px;
 	/* add an underline like the one on the h2s to the h3s, but make it solid and mint color */
 }
 
@@ -73,16 +74,17 @@ nav ul{
 }
 
 nav a{
-	/* make these display as block level elements */
+	display: block;
 	margin: 1rem auto;
 	padding: 1rem;
 	background-color: var(--tiffany);
-	/* set the font color to #222 (--dk-gray) */
-	/* center align the text */
-	/* remove the underline */
-	/* make the font's size 1.2rem */
-	/* make the font bolder (600) */
-}
+	color: var(--dk-gray);
+	text-align: center;
+	text-decoration: none;
+	font-size: 1.2rem;
+	font-weight: 600;
+  }
+
 
 nav a:hover{
     color: var(--dk-gray);
